fix: modal on mobile

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -74,7 +74,7 @@ body {
             pointer-events: none;
         }
 
-        @include min-md {
+        @include min-sm {
             .header, .nav, .footer {
                 opacity: 1;
                 pointer-events: all;
